--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -9,12 +9,20 @@
 
 <body>
 
-    <div id = "myList">
-        <ul class="">
-
+    <div id = "myList" >
+        <ul class="listContent">
+            <li>橘子 </li>
+            <li> 苹果</li>
+            <li> 水蜜桃</li>
+            <li> 葡萄</li>
+            <li> 梨</li>
+            <li> 火龙果</li>
+            <li> 百香果</li>
+                       
         </ul>
     </div>
 
+<script
 </body>
 
 </html>
